styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/*navigation bar*/
.navbar__section {
  background-color: rgb(20, 19, 94);
  color: white;
}

.navbar__section ul {
  padding: 10px;
  list-style: none;
  right: 0;
  margin-left: 10px;
}

.navbar__section li {
  display: inline;
  margin-right: 5px;
  padding-top: 15px;
  padding-bottom: 15px;
}

.navbar__section li img {
  width: 50px;
  height: 50px;
}

/*coming-soon section*/
.coming-soon__section {
  height: 150px;
  color: black;
  text-align: center;
  padding: 5px;
  font-family: "Merienda One", cursive;
}

.coming-soon__section h1 {
  font-size: 4em;
  font-weight: 300;
}

.coming-soon__section p {
  font-size: 20px;
}

/*coutdown_timer*/
.countdown__section {
  float: right;
  margin-top: 50px;
  margin-right: 200px;
  background-color: peru;
  height: 80%;
  width: 32%;
  padding: 10px;
  font-size: 20px;
}

.countdown__section td {
  padding: 10px;
}

/*sidebar*/
.social-media__section {
  /* height: 45%; */
  width: 55px;
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  background-color: #111;
  overflow-x: hidden;
  margin-top: 100px;
  padding-top: 20px;
}

.social-media__section a {
  padding: 6px 8px 6px 18px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.5s;
}

.social-media__section ul li a:hover {
  color: purple;
  transform: scale(1.3);
}

.mobile-social-media-section {
  display: none;
}

/* ----------------------Game CSS------------------------ */
.game_section {
  width: 500px;
  margin: 0;
}

.win {
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
  position: absolute;
  width: 100vw;
  height: 100vh;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}
.container {
  /* height: 100vh; */
  margin: 0;
  background-color: transparent;
  padding: 0;
}
.hidden {
  display: none;
}
h1 {
  color: black;
  font-size: 3.5rem;
}
.box {
  width: 400px;
  height: 200px;
  border-radius: 15px;
  text-align: center;
  background-color: white;
}
.btn {
  background-color: black;
  color: white;
  font-size: 1.5rem;
  border-radius: 15px;
  cursor: pointer;
  padding: 8px 12px;
  border: 0;
  outline: 0;
}
.line {
  width: 100px;
  background-color: black;
  height: 2px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: rotate(45deg);
  border-radius: 15px;
  animation: glitch 5s infinite;
  z-index: -1;
  display: block;
}

@keyframes glitch {
  0% {
    display: none;
    opacity: 0;
  }
  40% {
    display: block;
    opacity: 1;
    transform: rotate(0deg);
  }
  41% {
    display: none;
    opacity: 0;
  }
  90% {
    display: block;
    opacity: 1;
  }
}
/* -------------- Media Queries ------------------- */
@media (max-width: 760px) {
  .mobile-social-media-section {
    display: block;
    width: 100%;
    margin: 30px auto;
  }
  .mobile-social-media-inner-section {
    width: 80%;
    margin: auto;
  }
  .social-media__section {
    display: none;
  }
  .mobile-social-media-section a {
    padding: 0 10px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.5s;
    display: inline;
  }
}

